--- a/projects.html
+++ b/projects.html
@@ -137,20 +137,20 @@
     <div class="project-card powerbi sql"
       data-title="Coffee Shop Sales Analysis"
       data-desc="Quick summary."
-      data-img="assets/coffee.gif"
+      data-img="assets/coffeeshop.gif"
       data-github="https://github.com/yourusername/coffee-shop-sales"
       data-live="coffee.html">
-      <img src="assets/coffee.gif" alt="Coffee Shop Sales"/>
+      <img src="assets/Coffeeshop.gif" alt="Coffee Shop Sales"/>
       <h3>Coffee Shop Sales Analysis</h3>
     </div>
 
     <div class="project-card powerbi"
       data-title="Bank Customer Churn Analysis"
       data-desc="Quick summary."
-      data-img="assets/churn.gif"
+      data-img="assets/BankChurn.gif"
       data-github="https://github.com/yourusername/bank-churn-analysis"
-      data-live="churn.html">
-      <img src="assets/churn.gif" alt="Churn Analysis"/>
+      data-live="bank.html">
+      <img src="assets0/BankChurn.gif" alt="Churn Analysis"/>
       <h3>Bank Customer Churn Analysis</h3>
     </div>
   </div>
