--- a/pizza.html
+++ b/pizza.html
@@ -88,10 +88,10 @@
 <h2 style="color: #facc15;">📊 Dashboard Preview</h2>
 
 <!-- GIF preview -->
-<img src="Screenshots/PIZZA.gif" alt="Pizza Sales Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
+<img src="Screenshots/Pizza.gif" alt="Pizza Sales Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
 
 <!-- Screenshots -->
-<img src="Screenshots/pizza1.png" alt="Pizza Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
+<img src="Screenshots/Pizza1.png" alt="Pizza Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
 <img src="Screenshots/Pizza2.png" alt="Pizza Screenshot 2" style="border-radius: 10px; width: 100%; margin-bottom: 1.5rem;" />
 
 <!-- Button for Power BI users -->
