--- a/projects.html
+++ b/projects.html
@@ -150,7 +150,7 @@
       data-img="assets/BankChurn.gif"
       data-github="https://github.com/yourusername/bank-churn-analysis"
       data-live="bank.html">
-      <img src="assets0/BankChurn.gif" alt="Churn Analysis"/>
+      <img src="assets/BankChurn.gif" alt="Churn Analysis"/>
       <h3>Bank Customer Churn Analysis</h3>
     </div>
   </div>
