--- a/pizza.html
+++ b/pizza.html
@@ -88,11 +88,11 @@
 <h2 style="color: #facc15;">📊 Dashboard Preview</h2>
 
 <!-- GIF preview -->
-<img src="Screenshots/Pizza.gif" alt="Pizza Sales Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
+<img src="assets/Pizza.gif" alt="Pizza Sales Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
 
 <!-- Screenshots -->
-<img src="Screenshots/Pizza1.png" alt="Pizza Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
-<img src="Screenshots/Pizza2.png" alt="Pizza Screenshot 2" style="border-radius: 10px; width: 100%; margin-bottom: 1.5rem;" />
+<img src="assets/Pizza1.png" alt="Pizza Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
+<img src="assets/Pizza2.png" alt="Pizza Screenshot 2" style="border-radius: 10px; width: 100%; margin-bottom: 1.5rem;" />
 
 <!-- Button for Power BI users -->
 <a href="https://app.powerbi.com/reportEmbed?reportId=08089b7c-012c-4902-9beb-cb3d49876381&appId=5fe91805-1a90-4e2c-ae69-744906077568&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77"
