--- a/pizza.html
+++ b/pizza.html
@@ -41,11 +41,13 @@
     .btn {
       display: inline-block;
       margin-top: 1rem;
-      padding: 10px 20px;
+      padding: 0.75rem 1.5rem;
       background-color: #1f2937;
       color: white;
+      font-weight: 600;
+      border-radius: 8px;
       text-decoration: none;
-      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(91, 176, 255, 0.5);
     }
     pre {
       background: #f0f0f0;
@@ -85,25 +87,21 @@
 
     <hr>
 
-<h2 style="color: #facc15;">📊 Dashboard Preview</h2>
+    <h2 style="color: #facc15; font-size: 1.8rem;">📊 Dashboard Preview</h2>
+    <img src="assets/Pizza.gif" alt="Pizza Sales Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
+    <img src="assets/Pizza1.png" alt="Pizza Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
+    <img src="assets/Pizza2.png" alt="Pizza Screenshot 2" style="border-radius: 10px; width: 100%; margin-bottom: 1.5rem;" />
 
-<!-- GIF preview -->
-<img src="assets/Pizza.gif" alt="Pizza Sales Dashboard GIF" style="border-radius: 10px; width: 100%; margin-bottom: 1rem; box-shadow: 0 0 12px rgba(255,255,255,0.08);" />
+    <a href="https://app.powerbi.com/reportEmbed?reportId=08089b7c-012c-4902-9beb-cb3d49876381&appId=5fe91805-1a90-4e2c-ae69-744906077568&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77"
+      target="_blank"
+      class="btn"
+      style="background-color: #3b82f6;">
+      🔗 View Dashboard (Power BI Access Required)
+    </a>
 
-<!-- Screenshots -->
-<img src="assets/Pizza1.png" alt="Pizza Screenshot 1" style="border-radius: 10px; width: 100%; margin-bottom: 1rem;" />
-<img src="assets/Pizza2.png" alt="Pizza Screenshot 2" style="border-radius: 10px; width: 100%; margin-bottom: 1.5rem;" />
+    <hr>
 
-<!-- Button for Power BI users -->
-<a href="https://app.powerbi.com/reportEmbed?reportId=08089b7c-012c-4902-9beb-cb3d49876381&appId=5fe91805-1a90-4e2c-ae69-744906077568&autoAuth=true&ctid=e69af0f5-e703-4fdb-8a25-2d2a0d593c77"
-   target="_blank" 
-   class="btn"
-   style="display: inline-block; background-color: #3b82f6; color: white; padding: 0.75rem 1.5rem; border-radius: 8px; font-weight: 600; text-decoration: none; box-shadow: 0 0 10px rgba(91, 176, 255, 0.5);">
-   🔗 View Dashboard (Power BI Access Required)
-</a>
-
-
-    <h2>📈 KPIs</h2>
+    <h2>📈 Key KPIs</h2>
     <ul>
       <li><strong>Total Revenue</strong> – SUM of all order prices</li>
       <li><strong>Average Order Value</strong> – Total Revenue / Total Orders</li>
@@ -125,7 +123,7 @@ AS avg_pizzas_per_order
 FROM pizza_sales;
 </code></pre>
 
-    <h2>📊 Visuals & Insights</h2>
+    <h2>📊 Dashboard Features</h2>
     <ul>
       <li>Daily Orders by Weekday</li>
       <li>Monthly Order Volume</li>
