--- a/projects.html
+++ b/projects.html
@@ -117,6 +117,43 @@
       cursor: pointer;
       color: #fff;
     }
+    body::before {
+  content: '';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: -1;
+  pointer-events: none;
+  animation: float 20s linear infinite;
+}
+
+body::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image:
+    radial-gradient(circle, rgba(255,218,119,0.15) 10px, transparent 11px),
+    radial-gradient(circle, rgba(255,218,119,0.15) 8px, transparent 9px),
+    radial-gradient(circle, rgba(255,218,119,0.1) 6px, transparent 7px);
+  background-size: 100px 100px;
+  animation: float2 40s linear infinite;
+  z-index: -1;
+}
+
+@keyframes float {
+  0% { transform: translateY(0px); }
+  100% { transform: translateY(-50px); }
+}
+
+@keyframes float2 {
+  0% { transform: translateY(0px); }
+  100% { transform: translateY(-100px); }
+}
+
   </style>
 </head>
 
