--- a/projects.html
+++ b/projects.html
@@ -158,6 +158,10 @@ body::after {
 </head>
 
 <body>
+  <div class="nav">
+  <a href="index.html">🏠 Home</a>
+</div>
+
   <h1>My Projects</h1>
 
   <div class="projects-grid">
@@ -165,7 +169,7 @@ body::after {
       data-title="Pizza Sales Analysis"
       data-desc="Quick summary."
       data-img="assets/Pizza.gif"
-      data-github="https://github.com/yourusername/pizza-sales"
+      data-github="https://github.com/Niks23c/Pizza-Sales-Analysis-SQL-PowerBI-"
       data-live="pizza.html">
       <img src="assets/Pizza.gif" alt="Pizza Sales Analysis"/>
       <h3>Pizza Sales Analysis</h3>
@@ -175,7 +179,7 @@ body::after {
       data-title="Coffee Shop Sales Analysis"
       data-desc="Quick summary."
       data-img="assets/coffeeshop.gif"
-      data-github="https://github.com/yourusername/coffee-shop-sales"
+      data-github="https://github.com/Niks23c/coffee-shop-sales-analysis"
       data-live="coffee.html">
       <img src="assets/Coffeeshop.gif" alt="Coffee Shop Sales"/>
       <h3>Coffee Shop Sales Analysis</h3>
@@ -185,7 +189,7 @@ body::after {
       data-title="Bank Customer Churn Analysis"
       data-desc="Quick summary."
       data-img="assets/BankChurn.gif"
-      data-github="https://github.com/yourusername/bank-churn-analysis"
+      data-github="https://github.com/Niks23c/Bank-Churn-Analysis"
       data-live="bank.html">
       <img src="assets/BankChurn.gif" alt="Churn Analysis"/>
       <h3>Bank Customer Churn Analysis</h3>
