--- a/bank.html
+++ b/bank.html
@@ -107,12 +107,15 @@
   </style>
 </head>
 <body>
+  
+
   <div id="particles-js"></div>
 
   <div class="container animate__animated animate__fadeInUp">
-    <div class="nav">
-      <a href="https://niks23c.github.io/Nikhilchavan.github.io/">🏠 Home</a>
-    </div>
+<div class="nav">
+  <a href="index.html">🏠 Home</a>
+  <a href="projects.html" style="margin-left: 12px;">← Back to Projects</a>
+</div>
 
     <h1>🏦 Bank Customer Churn Analysis – Power BI</h1>
     <p>This Power BI project analyzes factors influencing customer churn in a bank and visualizes trends to support data-driven decision-making.</p>
