--- a/pizza.html
+++ b/pizza.html
@@ -109,9 +109,11 @@
   <div id="particles-js"></div>
 
   <div class="container animate__animated animate__fadeInUp">
-    <div class="nav">
-      <a href="https://niks23c.github.io/Nikhilchavan.github.io/">🏠 Home</a>
-    </div>
+<div class="nav">
+  <a href="index.html">🏠 Home</a>
+  <a href="projects.html" style="margin-left: 12px;">← Back to Projects</a>
+</div>
+
 
     <h1>🍕 Pizza Sales Analysis – SQL + Power BI</h1>
     <p>This project presents a detailed sales analysis of a fictional pizza shop using SQL and Power BI. It focuses on uncovering revenue trends, top-selling products, customer ordering behavior, and product category performance.</p>
