--- a/coffee.html
+++ b/coffee.html
@@ -109,9 +109,10 @@
   <div id="particles-js"></div>
 
   <div class="container animate__animated animate__fadeInUp">
-    <div class="nav">
-      <a href="https://niks23c.github.io/Nikhilchavan.github.io/">🏠 Home</a>
-    </div>
+<div class="nav">
+  <a href="index.html">🏠 Home</a>
+  <a href="projects.html" style="margin-left: 12px;">← Back to Projects</a>
+</div>
 
     <h1>☕ Coffee Shop Sales Analysis – SQL + Power BI</h1>
     <p>This project analyzes the daily and product-level performance of a coffee shop using Power BI and SQL. The analysis uncovers trends in sales, top-performing products, and customer behavior, providing actionable business insights.</p>
