--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,8 @@ body::after {
 </head>
 
 <body>
-  <div class="nav">
+  
+<div class="nav">
   <a href="index.html">🏠 Home</a>
 </div>
 
@@ -178,7 +179,7 @@ body::after {
     <div class="project-card powerbi sql"
       data-title="Coffee Shop Sales Analysis"
       data-desc="Quick summary."
-      data-img="assets/coffeeshop.gif"
+      data-img="assets/Coffeeshop.gif"
       data-github="https://github.com/Niks23c/coffee-shop-sales-analysis"
       data-live="coffee.html">
       <img src="assets/Coffeeshop.gif" alt="Coffee Shop Sales"/>
